# 4yp_emir

./: .gitignore  LICENSE  README.md
anytree_bt/: CMakeLists.txt  package.xml
anytree_bt/include/anytree_bt/: ApproachTarget.hpp  ExampleNodes.hpp  GraspTarget.hpp  GripperCommand.hpp  ManipulateTarget.hpp  ResetArmPose.hpp  UnitreeGripperCommand.hpp  UnitreeMonitorEffort.hpp  UnitreeMoveArm.hpp  UnitreePublishDeviceState.hpp  UnitreeSelectStrategy.hpp  bt_action_client_node.hpp  custom_types.hpp
anytree_bt/include/anytree_bt/anymal/: motion_transitioner.hpp  navigate_to_goal.hpp  switch_controller.hpp  switch_controller_and_set_operation_mode.hpp  switch_operational_mode.hpp
anytree_bt/resources/trees/: bt_approach_and_grasp_target.xml  bt_approach_target.xml  bt_close_gripper.xml  bt_manipulate_adaptive.xml  bt_move_to_pose.xml  bt_open_gripper.xml  bt_retract_target.xml  bt_standalone_arm_adaptive.xml  bt_standalone_arm_adaptive_v2.xml  bt_standalone_arm_test.xml  bt_standalone_arm_test_stage1.xml  bt_walk_and_manipulate_adaptive.xml  bt_walk_back_and_forth.xml  example_tree.xml  main.xml  manipulate.xml
anytree_bt/resources/trees/anymal/: navigate_to_goal.xml
anytree_bt/resources/trees/convenience/: bt_approach_and_grasp_target.xml  bt_approach_and_grasp_target_anymal.xml  bt_approach_target_anymal.xml  bt_clear_base_command.xml  bt_close_gripper_to_grasp.xml  bt_forward.xml  bt_get_handle_angle.xml  bt_move_to_pose.xml  bt_navigate_to_device.xml  bt_open_gripper.xml  bt_publish_device_state.xml  bt_reset_rest_pose.xml  bt_retract_target_anymal.xml  bt_square_up.xml  bt_stand.xml  bt_start_flat.xml  bt_torso_control.xml  bt_walk.xml  bt_walk_back_and_forth.xml
anytree_bt/src/: bt_runner.cpp  bt_standalone_arm_test.cpp  example_nodes.cpp  example_tree_anymal.cpp  manipulate.cpp  run_tree.cpp
anytree_control/: CMakeLists.txt  README.md  package.xml
anytree_control/include/anytree_control/: ArmControl.hpp  ExtendedKalmanFilter.hpp  LowPassFilter.hpp  Robot.hpp  RobotInterface.hpp  UnitreeRos.hpp  UnitreeRosBaseClass.hpp  UnitreeRosHW.hpp  UnitreeRosSim.hpp
anytree_control/launch/: anytree_control.launch  control_test.launch  standalone_arm_control.launch
anytree_control/scripts/: anytree_base_control.py
anytree_control/src/: UnitreeHw.cpp  UnitreeSim.cpp  armMotion.cpp  robot_interface_test.cpp  state_thread_test.cpp  unitree.cpp  z1_lowcmd_ros.cpp
anytree_control/src/Tests/: armMotion.cpp
anytree_control/src/tests/: armMotion.cpp  pin.cpp
anytree_description/: CMakeLists.txt  package.xml
anytree_description/config/: anytree.srdf  unitree.srdf
anytree_description/launch/: display_robot.launch
anytree_description/resources/: anytree.rviz  anytree_exotica.rviz
anytree_description/urdf/: anytree.urdf  unitree.urdf  z1_gripper.urdf
anytree_hardware/: CMakeLists.txt  package.xml
anytree_hardware/launch/: anytree_hardware_nodes.launch  standalone_arm_hardware_nodes.launch
anytree_hardware/scripts/: controller_startup.sh
anytree_motion_planner/: CMakeLists.txt  README.md  package.xml  setup.py
anytree_motion_planner/include/anytree_motion_planner/: MPCKinematicPlanner.hpp  MPCMotionPlanner.hpp  MotionPlannerBaseClass.hpp  MotionPlannerStandaloneArmBaseClass.hpp  StandaloneArmKinematicPlanner.hpp  TestAICO.hpp  TestAICO_wb.hpp  TestAlgorithm.hpp
anytree_motion_planner/launch/: algorithm_test.launch  anytree_motion_planner.launch  standalone_arm_motion_planner.launch
anytree_motion_planner/resources/configs/: approachTarget.xml  follow_traj.xml  graspTarget_kinematic.xml
anytree_motion_planner/resources/configs/dynamic/: approachTargetStandaloneArm_dynamic.xml  approachTarget_dynamic.xml  graspTargetStandaloneArm_dynamic.xml  graspTarget_dynamic.xml  manipulateTargetStandaloneArm_dynamic.xml  manipulateTarget_dynamic.xml  retractTargetStandaloneArm_dynamic.xml  retractTarget_dynamic.xml
anytree_motion_planner/resources/configs/examples/: example_mpc.xml  example_timeindexed.xml  example_timeindexed_wb.xml
anytree_motion_planner/resources/configs/kinematic/: approachTargetStandaloneArm_kinematic.xml  approachTarget_kinematic.xml  graspTarget_kinematic.xml  (+2 more)
anytree_motion_planner/scripts/: anytree_aico.py  approach_target.py
anytree_motion_planner/src/: MPCPlanner.cpp  MotionPlannerBaseClass.cpp  approachtarget_as.cpp  graspTarget_as.cpp  grasptarget_as.cpp  manipulateTarget_as.cpp  manipulatetarget_as.cpp  motion_planner_base.hpp
anytree_motion_planner/src/anytree_motion_planner_py/: __init__.py  mpc_planner_base_class.py
anytree_motion_planner/src/dynamic/: MotionPlannerBaseClass.cpp  MotionPlannerStandaloneArmBaseClass.cpp  approachtarget.cpp  approachtargetStandaloneArm.cpp  grasptarget.cpp  grasptargetStandaloneArm.cpp  manipulatetarget.cpp  manipulatetargetStandaloneArm.cpp  retracttarget.cpp  retracttargetStandaloneArm.cpp
anytree_motion_planner/src/examples/: example_motion.cpp  example_motion_aico.cpp  example_motion_ddp.cpp
anytree_motion_planner/src/kinematic/: approachtargetStandaloneArm_as.cpp  approachtarget_as.cpp  grasptargetStandaloneArm_as.cpp  grasptarget_as.cpp  manipulatetargetStandaloneArm_as.cpp  manipulatetarget_as.cpp
anytree_motion_planner/src/motion_planner_py/: mpc_planner_base_class.py
anytree_msgs/: CMakeLists.txt  package.xml
anytree_msgs/action/: gripperCommand.action  moveArm.action
anytree_msgs/srv/: selectStrategy.srv
bt_drs_msgs/: CMakeLists.txt  package.xml
bt_drs_msgs/action/: PlanAffordanceActuation.action  PlanIK.action  PlanTrajectory.action  approachTarget.action  graspTarget.action  manipulateTarget.action  testBase.action  toggleDevice.action  undockBase.action
bt_drs_msgs/msg/: TimeIndexedPose.msg  TimeIndexedTrajectory.msg
bt_drs_msgs/srv/: getHandleAngle.srv  interruptManipulation.srv  recordManipulationData.srv  selectStrategyForceTorque.srv  selectStrategyIncrementing.srv
simulation/: CMakeLists.txt  package.xml
simulation/config/: drs_sim_anytree.yaml
z1_interface/: CMakeLists.txt  package.xml
z1_interface/src/: example_z1_interface.cpp  z1_lowcmd_ros.cpp
(+42 files in other folders)
